# argilla-llama-index

./: .gitignore  .pre-commit-config.yaml  LICENSE_HEADER  README.md  pyproject.toml
.github/workflows/: integration-tests.yml  release.yml
docs/examples/: usage_example.ipynb
docs/tutorials/: getting_started.ipynb  github_rag_llamaindex_argilla.ipynb  rag_argilla.ipynb  tutorial.ipynb  tutorial_chatbot.ipynb  workflow_step_back_llamaindex_argilla.ipynb
src/: llama_index_handler.py
src/argilla_llama_index/: __init__.py  helpers.py  legacy_llama_index_handler.py  llama_index_handler.py
tests/: test_helpers.py  test_llama_index_callback.py  test_llama_index_handler.py
